plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/main/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
    }
}

sourceSets.main.resources { srcDir 'src/main/generated/resources' }

repositories {
    maven {
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url "https://maven.ftb.dev/releases"
    }
    maven {
        url "https://maven.architectury.dev"
    }
    maven {
        url "https://maven.latvian.dev/releases"
    }
    maven {
        url "https://maven.blamejared.com"
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    // FTB Library (Forge 1.20.1 - 2001.2.13)
    implementation fg.deobf("curse.maven:ftb-library-forge-404465:${ftb_library_cf_id}")

    // Architectury API (Forge 1.20.1 - 9.2.14)
    implementation fg.deobf("curse.maven:architectury-api-419699:${architectury_cf_id}")

    // JEI (Forge 1.20.1 - 15.20.0.105)
    compileOnly fg.deobf("curse.maven:jei-238222:${jei_cf_id}")
    runtimeOnly fg.deobf("curse.maven:jei-238222:${jei_cf_id}")

    // Jade (Forge 1.20.1 - 11.13.2)
    implementation fg.deobf("curse.maven:jade-324717:${jade_cf_id}")

    // KubeJS (Forge 1.20.1 - 2001.6.5-build.26)
    compileOnly(fg.deobf("curse.maven:kubejs-238086:${kubejs_cf_id}")) {
        transitive = false
    }

    // Rhino (Forge 1.20.1 - 2001.2.3-build.10)
    compileOnly(fg.deobf("curse.maven:rhino-416294:${rhino_cf_id}")) {
        transitive = false
    }
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}